feat: implement new `patchExistingEntity` signature in simplest services
adds 8 sonar issues regarding the deprecated signature