@@ -21,10 +21,14 @@
 package org.trebol.jpa.services.patch.impl;
 
 import lombok.NoArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.trebol.api.models.UserRolePojo;
+import org.trebol.common.exceptions.BadInputException;
 import org.trebol.jpa.entities.UserRole;
 import org.trebol.jpa.services.patch.UserRolesPatchService;
+
+import java.util.Map;
 
 @Service
 @NoArgsConstructor
@@ -32,14 +36,21 @@ public class UserRolesPatchServiceImpl
   implements UserRolesPatchService {
 
   @Override
-  public UserRole patchExistingEntity(UserRolePojo changes, UserRole existing) {
+  public UserRole patchExistingEntity(Map<String, Object> changes, UserRole existing) throws BadInputException {
     UserRole target = new UserRole(existing);
 
-    String name = changes.getName();
-    if (name != null && !name.isBlank() && target.getName().equals(name)) {
-      target.setName(name);
+    if (changes.containsKey("name")) {
+      String name = (String) changes.get("name");
+      if (!StringUtils.isBlank(name)) {
+        target.setName(name);
+      }
     }
 
     return target;
+  }
+
+  @Override
+  public UserRole patchExistingEntity(UserRolePojo changes, UserRole existing) throws BadInputException {
+    throw new UnsupportedOperationException("This method has been deprecated");
   }
 }
